GNOME Bugzilla – Bug 701911
video started from command line or nautilus stacked below the grilo search page
Last modified: 2013-07-03 14:35:33 UTC
totem.c app_init call to totem_object_add_main_page stack the grilo plugin search page above the basic video rendering. Only way to see video is to start it from inside grilo search page by a click on an entry.
That's expected, that's why it wasn't released in 3.9 yet.
Created attachment 247869 [details] [review] totem: set main page to player if playing This to avoid the player displaying the video below the grilo page: if files are passed via command line or added to the playlist.
Review of attachment 247869 [details] [review]: Patch looks good, but I'd have to test it to check whether that works in all cases. Any chance you could make a list of the cases you tested and that worked as expected?
Use cases I have tested : - command line : "$ totem file1 file2" (minus the 701997 bug in gst-plugins-base that breaks the playback of the second file. - totem, with playlist opened then add file and play it - grilo plugin : o with tracker local file o with upnp server - start from nautilus and DnD to playlist from nautilus this week end I saw once the video frame missing its header and the overlay menu. Today I tried to reproduce and did a few times... though the last test I tried a click on te video and they were back. Might there be a timeout ?
(In reply to comment #4) > Use cases I have tested : > - command line : "$ totem file1 file2" (minus the 701997 bug in > gst-plugins-base that breaks the playback of the second file. > - totem, with playlist opened then add file and play it > - grilo plugin : > o with tracker local file > o with upnp server > - start from nautilus and DnD to playlist from nautilus Works using the "Add Web Video..." menu item as well. I've filed a new bug about missing DnD support in the main view (https://bugzilla.gnome.org/show_bug.cgi?id=703549) > this week end I saw once the video frame missing its header and the overlay > menu. Today I tried to reproduce and did a few times... though the last test I > tried a click on te video and they were back. Might there be a timeout ? Clicking on the video is the way to show/hide the controls right now. See https://bugzilla.gnome.org/show_bug.cgi?id=697897