main: Set main page to player when playing

This to avoid the player displaying the video below
the grilo page if files are passed via command line
or added to the playlist.

https://bugzilla.gnome.org/show_bug.cgi?id=701911